Interface change correctement, changement pour bien prendre en compte la zone visible dans update particle count

--- a/styles/style.css
+++ b/styles/style.css
@@ -8,10 +8,9 @@
 .burger-menu {
     display : flex;
     position : absolute;
-    right:-3vw;
+    right:0;
     top:0;
     flex-direction : column;
-    background: rgba(0,0,0,0);
     z-index: 100;
     padding: 20px;
     padding-right: -100px;
@@ -23,11 +22,15 @@
 }
 
 .burger-menu.collapsed {
+    position : absolute;
+    right:0;
+    top:30px;
     display : flex;
-
-    opacity : 1;
     background: rgba(0,0,0,0);
+    opacity : 1;
     padding: 10px;
+    min-height: 10.6vh;
+    max-height: 10.6vh;
 }
 
 .menu-content {
@@ -111,20 +114,8 @@ button:hover {
 
 .simulation{
     width : 100%;
-    height: 94.6vh;
-    /*margin-top: 20px;*/
+    height: 94vh;
 }
-
-
-#colorScale {
-    height: 20px;
-    position: absolute;
-    top: 0;
-    left: 0;
-    border-bottom: 2px solid;
-    border-bottom-color: #f9f9f9;
-}
-
 
 #drawingCanvas{
     position: absolute;
@@ -132,8 +123,18 @@ button:hover {
     left: 0;
 }
 
-
-
+#colorScale {
+    height: 20px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    border-bottom: 2px solid;
+    border-bottom-color: #f9f9f9;
+    flex-grow : 10;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
 .colorScaleMarker {
     position: absolute;
     left: 0;
@@ -148,12 +149,17 @@ button:hover {
     left: 50%;
     top: 50%;
     width: 50px;
-    /* Move the span 10px to the right and 10px down from the center */
     transform: translate(calc(-50% + 10px), calc(-50% + 20px));
     color: white;
     font-size: 14px;
     font-weight: bold;
     font-family: Arial, sans-serif;
+}
+
+.colorScale-container {
+    position: relative;   /* Positionnement relatif pour supporter le positionnement absolu de #colorScale */
+    width: 100%;          /* Prend toute la largeur disponible */
+    min-height: 20px;     /* Hauteur minimale pour garantir la visibilité */
 }
 
 .index-div {
@@ -167,7 +173,6 @@ button:hover {
     flex-grow : 10;
 
 }
-
 body {
     min-height: 100vh;
 }
